Update brochure link to new file Solve-a-thon-1.0.pdf

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,7 +77,7 @@
             <div class="cta-buttons">
                 <a href="user_login.html" class="btn primary-btn glow-effect">Join
                     Mission</a>
-                <a href="brochure/solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
+                <a href="brochure/Solve-a-thon-1.0.pdf" target="_blank" class="btn secondary-btn">Mission Brief</a>
             </div>
         </div>
 
