Improve error logging for delete action in Admin Panel

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -707,7 +707,10 @@
                         }
                     });
 
-                    if (!response.ok) throw new Error("Delete failed or Unauthorized");
+                    if (!response.ok) {
+                        const errData = await response.json().catch(() => ({}));
+                        throw new Error(errData.message || `Status: ${response.status} ${response.statusText}`);
+                    }
 
                     alert(`Team "${teamName}" has been deleted.`);
                     fetchData(); // Refresh list
