working on acces card features

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -633,6 +633,9 @@
                 // Success Feedback
                 hideForm();
 
+                // Show Dashboard Immediately
+                showStatusDashboard(teamData);
+
                 let msg = '';
                 if (category === 'UG') {
                     // UG Specific Message
