Fix: Remove redundant category description in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -232,7 +232,7 @@
                     <li><i class="fa-solid fa-jet-fighter"></i> Open to all UG, PG, and Engineering students.</li>
                     <li><i class="fa-solid fa-jet-fighter"></i> <strong>Category Segregation:</strong><br>
                         &nbsp;&nbsp;• UG Category – evaluated separately<br>
-                        &nbsp;&nbsp;• MCA/MSc/BE & Engineering Category – evaluated together</li>
+                        &nbsp;&nbsp;• MCA/MSc/BE Category – evaluated together</li>
                     <li><i class="fa-solid fa-jet-fighter"></i> Teams must bring and assemble their own hardware
                         on-site.</li>
                     <li><i class="fa-solid fa-jet-fighter"></i> Use of open-source libraries and frameworks is allowed;
