Add email to Vishakh contact card

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -382,8 +382,9 @@
                     <div class="contact-row">
                         <a href="tel:+918296398814"><i class="fa-solid fa-phone"></i> +91 82963 98814</a>
                     </div>
-                    <div class="contact-row icon-only">
-                        <i class="fa-solid fa-envelope"></i>
+                    <div class="contact-row">
+                        <a href="mailto:vishakhkt.2003@gmail.com"><i class="fa-solid fa-envelope"></i>
+                            vishakhkt.2003@gmail.com</a>
                     </div>
                 </div>
 
