some mail id s are added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -353,13 +353,13 @@
             <div class="query-grid">
                 <!-- Roshni -->
                 <div class="query-card glass-panel">
-                    <h4>Roshni Bhagath</h4>
+                    <h4>Roshani Bhagath</h4>
                     <p class="role">Registration Head</p>
                     <div class="contact-row">
                         <a href="tel:+919483643437"><i class="fa-solid fa-phone"></i> +91 94836 43437</a>
                     </div>
                     <div class="contact-row icon-only">
-                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:roshanibhagat0503@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
 
